Fixed spacing issue on Home html page

--- a/main.css
+++ b/main.css
@@ -96,7 +96,7 @@
   }
 
   #intro {
-    padding: 0% 9% 20% 9%; 
+    padding: 0% 9% 9% 9%; 
     font-size: 1.25em;
   }
 
